--- a/public/css/admin.portal.css
+++ b/public/css/admin.portal.css
@@ -29,31 +29,13 @@
     margin: 0px;
 }
 
-#pending-tab {
-    font-family: 'Montserrat' sans-serif;
-    font-weight: 500;
-    font-size: 18px;
-    color: rgba(39, 76, 119, 1);
+a.nav-link {
+    color: black;
 }
 
-#inactive-tab {
-    font-family: 'Montserrat' sans-serif;
-    font-weight: 500;
-    font-size: 18px;
-    color: rgba(39, 76, 119, 1);
-}
-
-#all-tab {
-    font-family: 'Montserrat' sans-serif;
-    font-weight: 500;
-    font-size: 18px;
-    color: rgba(39, 76, 119, 1);
-}
-
-#all-listings-container {
+#admin-sidebar {
     border: solid;
-    border-width: 2.5px;
-    border-color: rgba(39, 76, 119, 1);
-    padding: 2rem;
-    margin-top: 1rem;
+    border-color: black;
+    border-width: 0px 2.5px 0px 2.5px;
 }
+
