--- a/public/css/admin.portal.css
+++ b/public/css/admin.portal.css
@@ -1,5 +1,5 @@
 .body {
-    height: 100%;
+    height: 100vh;
 }
 
 .nav-bar {
@@ -41,5 +41,6 @@ a.nav-link {
     border: solid;
     border-color: black;
     border-width: 0px 2.5px 0px 2.5px;
+    height: 100%; 
 }
 
