--- a/public/css/admin.portal.css
+++ b/public/css/admin.portal.css
@@ -14,7 +14,14 @@
 .nav-h1 {
     font-size: 40px;
     font-weight: 700;
-    font-family: 'Montserrat' ;
+    font-family: 'Raleway' ;
+    display: inline;
+}
+
+.h2 {
+    font-size: 40px;
+    font-weight: 500;
+    font-family: 'Raleway' ;
     display: inline;
 }
 
@@ -42,5 +49,33 @@ a.nav-link {
     border-color: black;
     border-width: 0px 2.5px 0px 2.5px;
     height: 100%; 
+}
+
+.sidebar-link {
+    font-family: 'lato';
+    font-weight: 300;
+    color: black;
+    font-size: 20px;
+}
+
+.sidebar-link:active {
+    font-family: 'lato';
+    font-weight: 400;
+    color: #696969;
+    font-size: 20px;
+}
+
+th {
+    font-family: 'Raleway';
+    font-weight: 600;
+    font-size: 20px;
+    color: #696969;
+}
+
+td {
+    font-family: 'Lato';
+    font-weight: 400;
+    color: black;
+    font-size: 16px;
 }
 
