--- a/public/css/listing.css
+++ b/public/css/listing.css
@@ -1,5 +1,17 @@
 p {
   font-family: 'lato';
+  font-size: 20px;
+}
+
+li {
+  font-family: 'lato';
+  font-size: 20px;
+}
+
+a {
+  font-family: 'lato';
+  font-size: 20px;
+  color: #1f7a8c;
 }
 
 h1 {
@@ -45,7 +57,7 @@ a:hover {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
   font-size: 45px;
-  color: #1f7a8c;
+  color: black;
   margin: 0px;
 }
 
@@ -109,10 +121,20 @@ a:hover {
 }
 
 #listing-column {
-  background: #f5f5f5;
+  background: #ffffff;
   padding: 3rem;
   padding-top: 0px;
-  padding-bottom: 0px;
+  padding-bottom: 1rem;
+  box-shadow:
+  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+  0 12.5px 10px rgba(0, 0, 0, 0.06),
+  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+  0 100px 80px rgba(0, 0, 0, 0.12);
+  /* border: solid;
+  border-width: .5px 0px 0px 0px;
+  border-color: black; */
 }
 
 #listing_description {
@@ -342,9 +364,9 @@ a:hover {
 }
 
 
-#title-section {
+/* #title-section {
     margin-bottom: 1rem;
-}
+} */
 
 #hours-column {
     padding: 2rem;
@@ -397,4 +419,32 @@ hr.style14 {
   font-weight: 500;
 }
 
+#images-column {
+  background: #ffffff;
+  padding-bottom: 0px;
+  padding-top: 0rem;
+  /* border: solid;
+  border-color: #696969;
+  border-width: 0px 0px 2.5px 0px ; */
+}
+
+#images {
+  padding: 0px;
+}
+
+.carousel-images {
+  width: 25%;
+  height: 35vh;
+}
+
+#title-section-row {
+  padding-top: 0px; 
+  width: 100%;
+
+}
+
+#image-content {
+  height: 100%;
+  width: auto;
+}
 
