--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -285,3 +285,14 @@
     font-weight: 300;
     font-size: 16px;
 }
+
+.upgrade-text {
+    font-family: 'lato';
+    font-weight: 400;
+    font-size: 14px;
+    color: red;
+}
+
+a {
+    cursor: pointer;
+}
