--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -138,7 +138,7 @@ body {
   font-size: 20px;
   height: 101%;
   display: table;
-  width: 100%;
+  /* width: 100%; */
 }
 
 #logout-button {
@@ -1027,7 +1027,7 @@ body {
 
 #title-col {
   padding: 5rem;
-  padding-bottom: 3.5rem;
+  padding-bottom: 1rem;
 }
 
 #why-title {
@@ -1622,6 +1622,18 @@ body {
   .big-header-text {
     margin-left: 0px;
   }
+
+  #business-mag-img {
+    height: 75vh;
+    max-width: 100%;
+    -webkit-transform:rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
 }
+
+
 
 
